--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Trang Tran's Resume
+title: ✪ Resume ✪
 description: As a software developer I have almost 3 years of working experience and been working in many projects with various sizes. I see myself growing everyday by doing new things and learning new technologies.
